# haskell-obs-websocket

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  obs-websocket.cabal
.github/workflows/: ci.yaml
src/: Const.hs  Main.hs  Opts.hs
src/Web/OBSWebSocket/API/: Client.hs  Server.hs
