cabal-version: 2.4
name:          obs-websocket
version:       0.0.0.1

synopsis:      OBS Websocket client
description:   Library for control of OBS via its websocket interface
category:      Web

author:        Tina Wuest
maintainer:    tina@wuest.me
copyright:     2024 Tina Wuest
license:       BSD-3-Clause

bug-reports: https://github.com/wuest/haskell-obs-websocket/issues

source-repository head
  type: git
  location: https://github.com/wuest/haskell-obs-websocket.git

library
  ghc-options:      -Wall -fwarn-implicit-prelude -fwarn-monomorphism-restriction -static
  default-language: Haskell2010
  default-extensions: LambdaCase
                    , OverloadedStrings
                    , ScopedTypeVariables
  hs-source-dirs:   src
  exposed-modules: Web.OBSWebSocket.API.Server
                 , Web.OBSWebSocket.API.Client
  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base              >= 4.9  && < 5
                  , aeson             >= 2.1  && < 2.3
                  , SHA               >= 1.6  && < 1.7
                  , bytestring        >= 0.11 && < 0.12
                  , base64-bytestring >= 1.2  && < 1.3
                  , binary            >= 0.8  && < 0.9

executable obs-ws
  main-is: Main.hs

  ghc-options:        -Wall -Wpartial-fields -fwarn-implicit-prelude -fwarn-monomorphism-restriction -threaded 
  default-language:   Haskell2010
  hs-source-dirs:     src
  default-extensions: OverloadedStrings
                    , ScopedTypeVariables
  other-modules:      Opts
                    , Const

  build-depends: base              >= 4.9  && < 5
               , aeson             >= 2.1  && < 2.3
               , SHA               >= 1.6  && < 1.7
               , bytestring        >= 0.11 && < 0.12
               , base64-bytestring >= 1.2  && < 1.3
               , binary            >= 0.8  && < 0.9

               , file-embed >= 0.0.15 && < 0.0.17
               , mtl        >= 2.2    && < 2.4
               , network    >= 3.1    && < 3.3
               , text       >= 1.2    && < 2.2
               , websockets >= 0.12   && < 0.14
